* Explicitly wrap some XML calls in libxml_disable_entity_loader().
* (T263455 T247285) Set EnableJavaScriptTest to true in
  includes/DevelopmentSettings.php.
* (T232568) SpecialUserrights: If a viewer lacks `hideuser`, ignore hidden
  users.
* (T255918, CVE-2020-25812) SECURITY: Unescaped message used in HTML on
  Special:Contributions.

== MediaWiki 1.34.2 ==

This is a security and maintenance release of the MediaWiki 1.34 branch.

=== Changes since MediaWiki 1.34.1 ===
* (T247017) PasswordReset performance improvements.
* The MultiHttpClient code will fallover to non-curl if curl_multi* is blocked.
* (T250568) Work around change in SimpleXMLElement behavior introduced in PHP
  7.3.17.
* (T251789) Let $wgResourceLoaderMaxQueryLength=-1 fallback to default.
* Remove some rotten and out of date documentation.
* (T252311) Improvements to some older SQLite update patches.
* (T240307) Minor fixes to extension.schema.v2.json and
  extension.schema.v1.json.
* (T238043) cleanupUsersWithNoId.php: Handle missing fields.
* (T199474) Set rc_patrolled to 2 for autopatrolled changes in
  rebuildrecentchanges.php.
* (T229461) Update the change_tag table in rebuildrecentchanges.php.
* (T249730) Password Reset Updates.
* (T234450) Per-user concurrency in SpecialContributions can now be limited by
  setting $wgPoolCounterConf['SpecialContributions'] appropriately.
* (T248947) SECURITY: img_auth.php may leak private extension images into the
  public cache.

== MediaWiki 1.34.1 ==

This is a security and maintenance release of the MediaWiki 1.34 branch.

=== Changes since MediaWiki 1.34.0 ===
* (T211450) User: better error message when getActorId fails.
* (T241340) Don't redefine MW_ENTRY_POINT in thumb.php if already defined.
* (T236444) User: Allow newSystemUser() to create over anonymous actors.
* (T238483) Fix NewPagesPager "hide registered users" option.
* (T245072) mediawiki.language: Rename languageData back to languageNames.