@@ -50,6 +50,8 @@ THIS IS NOT A RELEASE YET
   users.
 * (T255918, CVE-2020-25812) SECURITY: Unescaped message used in HTML on
   Special:Contributions.
+* (T256171, CVE-2020-25815) SECURITY: Unescaped message used in HTML within
+  LogEventsList.
 
 == MediaWiki 1.34.2 ==
 
